--- a/views/public/css/style.css
+++ b/views/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/views/public/img/StarfieldSimulation.gif);
+  background-image: url(../img/StarfieldSimulation.gif);
   font-family: "Orbitron", sans-serif;
   width: 100%;
 }
@@ -13,6 +13,7 @@ h5 {
   display: flex;
   text-align: justify;
 }
+
 .cohete_1 {
   visibility: hidden;
 }
