--- a/views/public/index.html
+++ b/views/public/index.html
@@ -6,18 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cohetes</title>
-    <link rel="icon" href="./img/favicon/favicon (1).ico">
-    <link rel="stylesheet" href="./bootstrap/bootstrap.min (2).css">
+    <link rel="icon" href="../public/img/favicon/favicon (1).ico">
+    <link rel="stylesheet" href="../public/bootstrap/bootstrap.min (2).css">
     <!-- Bootstrap scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
+    <!-- Optional JavaScript -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+
     <!-- Animate cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
 
 <body>
@@ -42,8 +51,8 @@
                     </div>
                     <div>
                         <br>
-                        <img src="/views/public/img/cohete1.png" class="cohete_1 animate__animated " id="cohete1"
-                            width="67%">
+                        <img src="../public/img/cohete1.png" class="cohete_1 animate__animated " id="cohete1"
+                            width="76%">
                         <h3 class="text-warning bg-transparent" id="cohete1Crear"></h3>
                         <h5 class="text-dark bg-transparent" id="velocidad1"></h5>
                         <h4 class="text-dark bg-transparent" id="cohete1Error"></h4>
@@ -63,8 +72,8 @@
                     </div>
                     <div>
                         <br>
-                        <img src="/views/public/img/cohete2.png" class="cohete_2 animate__animated " id="cohete2"
-                            width="88%">
+                        <img src="../public/img/cohete2.png" class="cohete_2 animate__animated " id="cohete2"
+                            width="100%">
                         <h3 class="text-warning bg-transparent" id="cohete2Crear"></h3>
                         <h5 class="text-dark bg-transparent" id="velocidad2"></h5>
                         <h4 class="text-dark bg-transparent" id="cohete2Error"></h4>
@@ -76,14 +85,7 @@
     </main>
     <script src="/models/cohete.js"></script>
     <script src="/controllers/controller.js"></script>
-    <!-- Optional JavaScript -->
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
+    >
 
 
 </body>
