--- a/views/public/index.html
+++ b/views/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cohetes</title>
-    <link rel="icon" href="../public/img/favicon/favicon (1).ico">
+    <link rel="icon" href="./img/favicon/favicon (1).ico">
     <link rel="stylesheet" href="../public/bootstrap/bootstrap.min (2).css">
     <!-- Bootstrap scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
@@ -26,7 +26,7 @@
 
     <!-- Animate cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
