--- a/views/public/index.html
+++ b/views/public/index.html
@@ -83,8 +83,8 @@
             </div>
         </div>
     </main>
-    <script src="/models/cohete.js"></script>
-    <script src="/controllers/controller.js"></script>
+    <script src="./models/cohete.js"></script>
+    <script src="./controllers/controller.js"></script>
     >
 
 
