--- a/views/public/index.html
+++ b/views/public/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 
     <!-- Animate cdn -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -83,8 +83,8 @@
             </div>
         </div>
     </main>
-    <script src="./models/cohete.js"></script>
-    <script src="./controllers/controller.js"></script>
+    <script src="/models/cohete.js"></script>
+    <script src="/controllers/controller.js"></script>
     >
 
 
