--- a/views/public/index.html
+++ b/views/public/index.html
@@ -20,8 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
-    <script src="/models/cohete.js"></script>
-    <script src="/controllers/controller.js"></script>
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
@@ -85,7 +84,8 @@
             </div>
         </div>
     </main>
-
+    <script src="../../models/Cohete.js"></script>
+    <script src="../../controllers/controller.js"></script>
 </body>
 
 </html>
