--- a/views/public/css/style.css
+++ b/views/public/css/style.css
@@ -3,22 +3,31 @@ body {
   font-family: "Orbitron", sans-serif;
   width: 100%;
 }
-h1 {
+h1{
   font-family: "Orbitron", sans-serif;
   display: flex;
   justify-content: center;
+
 }
-h5 {
+h4 {
+  font-size: 25px;
+  display: flex;
+  text-align: center;
+  color:coral;
+}
+h2 {
   font-size: 20px;
   display: flex;
-  text-align: justify;
+  justify-content: baseline;
+  text-align: center !important;
+  color:coral;
 }
 
-.cohete_1 {
+.rocket_1 {
   visibility: hidden;
 }
 
-.cohete_2 {
+.rocket_2 {
   visibility: hidden;
 }
 
